ruby/headers/ruby.h

typedef unsigned long VALUE;
typedef unsigned long ID;
VALUE rb_int2inum (long);
VALUE rb_uint2inum (unsigned long);
VALUE rb_ll2inum (long long);
VALUE rb_ull2inum (unsigned long long);
void rb_check_type (VALUE,int);
VALUE rb_str_to_str (VALUE);
VALUE rb_string_value (volatile VALUE*);
char *rb_string_value_ptr (volatile VALUE*);
char *rb_string_value_cstr (volatile VALUE*);
void rb_check_safe_obj (VALUE);
void rb_check_safe_str (VALUE);
void rb_secure (int);
extern int ruby_safe_level;
void rb_set_safe_level (int);
void rb_secure_update (VALUE);
long rb_num2long (VALUE);
unsigned long rb_num2ulong (VALUE);
long long rb_num2ll (VALUE);
unsigned long long rb_num2ull (VALUE);
double rb_num2dbl (VALUE);
char *rb_str2cstr (VALUE,long*);
VALUE rb_newobj (void);
struct RBasic {
    unsigned long flags;
    VALUE klass;
};
struct RObject {
    struct RBasic basic;
    struct st_table *iv_tbl;
};
struct RClass {
    struct RBasic basic;
    struct st_table *iv_tbl;
    struct st_table *m_tbl;
    VALUE super;
};
struct RFloat {
    struct RBasic basic;
    double value;
};
struct RString {
    struct RBasic basic;
    long len;
    char *ptr;
    union {
 long capa;
 VALUE shared;
    } aux;
};
struct RArray {
    struct RBasic basic;
    long len;
    union {
 long capa;
 VALUE shared;
    } aux;
    VALUE *ptr;
};
struct RRegexp {
    struct RBasic basic;
    struct re_pattern_buffer *ptr;
    long len;
    char *str;
};
struct RHash {
    struct RBasic basic;
    struct st_table *tbl;
    int iter_lev;
    VALUE ifnone;
};
struct RFile {
    struct RBasic basic;
    struct OpenFile *fptr;
};
struct RData {
    struct RBasic basic;
    void (*dmark) (void*);
    void (*dfree) (void*);
    void *data;
};
typedef void (*RUBY_DATA_FUNC) (void*);
VALUE rb_data_object_alloc (VALUE,void*,RUBY_DATA_FUNC,RUBY_DATA_FUNC);
struct RStruct {
    struct RBasic basic;
    long len;
    VALUE *ptr;
};
struct RBignum {
    struct RBasic basic;
    char sign;
    long len;
    void *digits;
};
void rb_obj_infect (VALUE,VALUE);
void rb_glob (const char*,void(*)(const char*,VALUE),VALUE);
void rb_globi (const char*,void(*)(const char*,VALUE),VALUE);
VALUE rb_define_class (const char*,VALUE);
VALUE rb_define_module (const char*);
VALUE rb_define_class_under (VALUE, const char*, VALUE);
VALUE rb_define_module_under (VALUE, const char*);
void rb_include_module (VALUE,VALUE);
void rb_extend_object (VALUE,VALUE);
void rb_define_variable (const char*,VALUE*);
void rb_define_virtual_variable (const char*,VALUE(*)(),void(*)());
void rb_define_hooked_variable (const char*,VALUE*,VALUE(*)(),void(*)());
int ruby_glob (const char*,int,int(*)(const char*,VALUE),VALUE);
int ruby_globi (const char*,int,int(*)(const char*,VALUE),VALUE);
void rb_define_readonly_variable (const char*,VALUE*);
void rb_define_const (VALUE,const char*,VALUE);
void rb_define_global_const (const char*,VALUE);
void rb_define_method (VALUE,const char*,VALUE(*)(),int);
void rb_define_module_function (VALUE,const char*,VALUE(*)(),int);
void rb_define_global_function (const char*,VALUE(*)(),int);
void rb_undef_method (VALUE,const char*);
void rb_define_alias (VALUE,const char*,const char*);
void rb_define_attr (VALUE,const char*,int,int);
void rb_global_variable (VALUE*);
void rb_gc_register_address (VALUE*);
void rb_gc_unregister_address (VALUE*);
ID rb_intern (const char*);
char *rb_id2name (ID);
ID rb_to_id (VALUE);
char *rb_class2name (VALUE);
char *rb_obj_classname (VALUE);
void rb_p (VALUE);
VALUE rb_eval_string (const char*);
VALUE rb_eval_string_protect (const char*, int*);
VALUE rb_eval_string_wrap (const char*, int*);
VALUE rb_funcall (VALUE, ID, int, ...);
VALUE rb_funcall2 (VALUE, ID, int, const VALUE*);
VALUE rb_funcall3 (VALUE, ID, int, const VALUE*);
int rb_scan_args (int, const VALUE*, const char*, ...);
VALUE rb_call_super (int, const VALUE*);
VALUE rb_gv_set (const char*, VALUE);
VALUE rb_gv_get (const char*);
VALUE rb_equal (VALUE,VALUE);
extern VALUE ruby_verbose, ruby_debug;
void rb_raise (VALUE, const char*, ...) __attribute__ ((noreturn));
void rb_fatal (const char*, ...) __attribute__ ((noreturn));
void rb_bug (const char*, ...) __attribute__ ((noreturn));
void rb_sys_fail (const char*) __attribute__ ((noreturn));
void rb_iter_break (void) __attribute__ ((noreturn));
void rb_exit (int) __attribute__ ((noreturn));
void rb_notimplement (void) __attribute__ ((noreturn));
void rb_warning (const char*, ...);
void rb_sys_warning (const char*, ...);
void rb_warn (const char*, ...);
VALUE rb_each (VALUE);
VALUE rb_yield (VALUE);
VALUE rb_yield_values (int n, ...);
VALUE rb_yield_splat (VALUE);
int rb_block_given_p (void);
void rb_need_block (void);
VALUE rb_iterate (VALUE(*)(VALUE),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue2 (VALUE(*)(),VALUE,VALUE(*)(),VALUE,...);
VALUE rb_ensure (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_catch (const char*,VALUE(*)(),VALUE);
void rb_throw (const char*,VALUE) __attribute__ ((noreturn));
VALUE rb_require (const char*);
void ruby_init (void);
void ruby_options (int, char**);
void ruby_run (void) __attribute__ ((noreturn));
extern VALUE rb_mKernel;
extern VALUE rb_mComparable;
extern VALUE rb_mEnumerable;
extern VALUE rb_mPrecision;
extern VALUE rb_mErrno;
extern VALUE rb_mFileTest;
extern VALUE rb_mGC;
extern VALUE rb_mMath;
extern VALUE rb_mProcess;
extern VALUE rb_cObject;
extern VALUE rb_cArray;
extern VALUE rb_cBignum;
extern VALUE rb_cClass;
extern VALUE rb_cDir;
extern VALUE rb_cData;
extern VALUE rb_cFalseClass;
extern VALUE rb_cFile;
extern VALUE rb_cFixnum;
extern VALUE rb_cFloat;
extern VALUE rb_cHash;
extern VALUE rb_cInteger;
extern VALUE rb_cIO;
extern VALUE rb_cModule;
extern VALUE rb_cNilClass;
extern VALUE rb_cNumeric;
extern VALUE rb_cProc;
extern VALUE rb_cRange;
extern VALUE rb_cRegexp;
extern VALUE rb_cString;
extern VALUE rb_cSymbol;
extern VALUE rb_cThread;
extern VALUE rb_cTime;
extern VALUE rb_cTrueClass;
extern VALUE rb_cStruct;
extern VALUE rb_eException;
extern VALUE rb_eStandardError;
extern VALUE rb_eSystemExit;
extern VALUE rb_eInterrupt;
extern VALUE rb_eSignal;
extern VALUE rb_eFatal;
extern VALUE rb_eArgError;
extern VALUE rb_eEOFError;
extern VALUE rb_eIndexError;
extern VALUE rb_eRangeError;
extern VALUE rb_eIOError;
extern VALUE rb_eRuntimeError;
extern VALUE rb_eSecurityError;
extern VALUE rb_eSystemCallError;
extern VALUE rb_eTypeError;
extern VALUE rb_eZeroDivError;
extern VALUE rb_eNotImpError;
extern VALUE rb_eNoMemError;
extern VALUE rb_eNoMethodError;
extern VALUE rb_eFloatDomainError;
extern VALUE rb_eScriptError;
extern VALUE rb_eNameError;
extern VALUE rb_eSyntaxError;
extern VALUE rb_eLoadError;
extern VALUE rb_stdin, rb_stdout, rb_stderr;
extern VALUE ruby_errinfo;
static inline VALUE

rb_class_of(VALUE obj)




{
    if ((((long)(obj))&0x01)) return rb_cFixnum;
    if (obj == ((VALUE)4)) return rb_cNilClass;
    if (obj == ((VALUE)0)) return rb_cFalseClass;
    if (obj == ((VALUE)2)) return rb_cTrueClass;
    if ((((VALUE)(obj)&0xff)==0x0e)) return rb_cSymbol;

    return ((struct RBasic*)(obj))->klass;
}
static inline int

rb_type(VALUE obj)




{
    if ((((long)(obj))&0x01)) return 0x0a;
    if (obj == ((VALUE)4)) return 0x01;
    if (obj == ((VALUE)0)) return 0x21;
    if (obj == ((VALUE)2)) return 0x20;
    if (obj == ((VALUE)6)) return 0x3c;
    if ((((VALUE)(obj)&0xff)==0x0e)) return 0x24;
    return (((struct RBasic*)(obj))->flags & 0x3f);
}
static inline int

rb_special_const_p(VALUE obj)




{
    if ((((VALUE)(obj) & 0x03) || !(((VALUE)(obj) & ~((VALUE)4)) != 0))) return ((VALUE)2);
    return ((VALUE)0);
}
struct timezone
  {
    int tz_minuteswest;
    int tz_dsttime;
  };
typedef struct timezone *__restrict __timezone_ptr_t;
extern int gettimeofday (struct timeval *__restrict __tv,
    __timezone_ptr_t __tz) __attribute__ ((__nothrow__));
extern int settimeofday (__const struct timeval *__tv,
    __const struct timezone *__tz) __attribute__ ((__nothrow__));
extern int adjtime (__const struct timeval *__delta,
      struct timeval *__olddelta) __attribute__ ((__nothrow__));
enum __itimer_which
  {

    ITIMER_REAL = 0,


    ITIMER_VIRTUAL = 1,



    ITIMER_PROF = 2

  };
struct itimerval
  {

    struct timeval it_interval;

    struct timeval it_value;
  };
typedef int __itimer_which_t;
extern int getitimer (__itimer_which_t __which,
        struct itimerval *__value) __attribute__ ((__nothrow__));
extern int setitimer (__itimer_which_t __which,
        __const struct itimerval *__restrict __new,
        struct itimerval *__restrict __old) __attribute__ ((__nothrow__));
extern int utimes (__const char *__file, __const struct timeval __tvp[2])
     __attribute__ ((__nothrow__));
extern int lutimes (__const char *__file, __const struct timeval __tvp[2])
     __attribute__ ((__nothrow__));
extern int futimes (int __fd, __const struct timeval __tvp[2]) __attribute__ ((__nothrow__));
void rb_mem_clear (register VALUE*, register long);
VALUE rb_assoc_new (VALUE, VALUE);
VALUE rb_check_array_type (VALUE);
VALUE rb_ary_new (void);
VALUE rb_ary_new2 (long);
VALUE rb_ary_new3 (long,...);
VALUE rb_ary_new4 (long, const VALUE *);
VALUE rb_ary_freeze (VALUE);
VALUE rb_ary_aref (int, VALUE*, VALUE);
void rb_ary_store (VALUE, long, VALUE);
VALUE rb_ary_dup (VALUE);
VALUE rb_ary_to_ary (VALUE);
VALUE rb_ary_to_s (VALUE);
VALUE rb_ary_push (VALUE, VALUE);
VALUE rb_ary_pop (VALUE);
VALUE rb_ary_shift (VALUE);
VALUE rb_ary_unshift (VALUE, VALUE);
VALUE rb_ary_entry (VALUE, long);
VALUE rb_ary_each (VALUE);
VALUE rb_ary_join (VALUE, VALUE);
VALUE rb_ary_print_on (VALUE, VALUE);
VALUE rb_ary_reverse (VALUE);
VALUE rb_ary_sort (VALUE);
VALUE rb_ary_sort_bang (VALUE);
VALUE rb_ary_delete (VALUE, VALUE);
VALUE rb_ary_delete_at (VALUE, long);
VALUE rb_ary_clear (VALUE);
VALUE rb_ary_plus (VALUE, VALUE);
VALUE rb_ary_concat (VALUE, VALUE);
VALUE rb_ary_assoc (VALUE, VALUE);
VALUE rb_ary_rassoc (VALUE, VALUE);
VALUE rb_ary_includes (VALUE, VALUE);
VALUE rb_ary_cmp (VALUE, VALUE);
VALUE rb_protect_inspect (VALUE(*)(),VALUE,VALUE);
VALUE rb_inspecting_p (VALUE);
VALUE rb_check_array_value (VALUE);
VALUE rb_values_at (VALUE, long, int, VALUE*, VALUE(*) (VALUE,long));
VALUE rb_big_clone (VALUE);
void rb_big_2comp (VALUE);
VALUE rb_big_norm (VALUE);
VALUE rb_uint2big (unsigned long);
VALUE rb_int2big (long);
VALUE rb_uint2inum (unsigned long);
VALUE rb_int2inum (long);
VALUE rb_cstr_to_inum (const char*, int, int);
VALUE rb_str_to_inum (VALUE, int, int);
VALUE rb_cstr2inum (const char*, int);
VALUE rb_str2inum (VALUE, int);
VALUE rb_big2str (VALUE, int);
long rb_big2long (VALUE);
unsigned long rb_big2ulong (VALUE);
VALUE rb_ll2inum (long long);
VALUE rb_ull2inum (unsigned long long);
long long rb_big2ll (VALUE);
unsigned long long rb_big2ull (VALUE);
void rb_quad_pack (char*,VALUE);
VALUE rb_quad_unpack (const char*,int);
VALUE rb_dbl2big (double);
double rb_big2dbl (VALUE);
VALUE rb_big_plus (VALUE, VALUE);
VALUE rb_big_minus (VALUE, VALUE);
VALUE rb_big_mul (VALUE, VALUE);
VALUE rb_big_divmod (VALUE, VALUE);
VALUE rb_big_pow (VALUE, VALUE);
VALUE rb_big_and (VALUE, VALUE);
VALUE rb_big_or (VALUE, VALUE);
VALUE rb_big_xor (VALUE, VALUE);
VALUE rb_big_lshift (VALUE, VALUE);
VALUE rb_big_rand (VALUE, double*);
VALUE rb_class_boot (VALUE);
VALUE rb_class_new (VALUE);
VALUE rb_mod_init_copy (VALUE, VALUE);
VALUE rb_class_init_copy (VALUE, VALUE);
VALUE rb_singleton_class_clone (VALUE);
void rb_singleton_class_attached (VALUE,VALUE);
VALUE rb_make_metaclass (VALUE, VALUE);
void rb_check_inheritable (VALUE);
VALUE rb_class_inherited (VALUE, VALUE);
VALUE rb_define_class_id (ID, VALUE);
VALUE rb_module_new (void);
VALUE rb_define_module_id (ID);
VALUE rb_mod_included_modules (VALUE);
VALUE rb_mod_include_p (VALUE, VALUE);
VALUE rb_mod_ancestors (VALUE);
VALUE rb_class_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_public_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_protected_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_private_instance_methods (int, VALUE*, VALUE);
VALUE rb_obj_singleton_methods (int, VALUE*, VALUE);
void rb_define_method_id (VALUE, ID, VALUE (*)(), int);
void rb_frozen_class_p (VALUE);
void rb_undef (VALUE, ID);
void rb_define_protected_method (VALUE, const char*, VALUE (*)(), int);
void rb_define_private_method (VALUE, const char*, VALUE (*)(), int);
void rb_define_singleton_method (VALUE, const char*, VALUE(*)(), int);
VALUE rb_singleton_class (VALUE);
int rb_cmpint (VALUE, VALUE, VALUE);
void rb_cmperr (VALUE, VALUE) __attribute__ ((noreturn));
extern int ruby_nerrs;
VALUE rb_exc_new (VALUE, const char*, long);
VALUE rb_exc_new2 (VALUE, const char*);
VALUE rb_exc_new3 (VALUE, VALUE);
void rb_loaderror (const char*, ...) __attribute__ ((noreturn));
void rb_name_error (ID, const char*, ...) __attribute__ ((noreturn));
void rb_invalid_str (const char*, const char*) __attribute__ ((noreturn));
void rb_compile_error (const char*, ...);
void rb_compile_error_append (const char*, ...);
void rb_load_fail (const char*) __attribute__ ((noreturn));
void rb_error_frozen (const char*) __attribute__ ((noreturn));
void rb_check_frozen (VALUE);
void rb_define_alloc_func (VALUE, VALUE (*)(VALUE));
VALUE rb_proc_new (VALUE (*)( ), VALUE);
VALUE rb_protect (VALUE (*)(VALUE), VALUE, int*);
void rb_set_end_proc (void (*)(VALUE), VALUE);
VALUE rb_thread_create (VALUE (*)(), void*);
void st_foreach_safe (struct st_table *, int (*)(), unsigned long);
void rb_hash_foreach (VALUE, int (*)(), VALUE);
void ruby_posix_signal (int, void (*)(int));