ruby/c/ruby.d

module ruby.c.ruby;

private import ruby.c.common;
private import ruby.c.st;
private import ruby.c.regex;
private import ruby.c.rubyio;
private import ruby.c.node;


extern (C) {

alias ulong VALUE;
alias ulong ID;

void rb_check_type (VALUE,int);


VALUE rb_str_to_str (VALUE);
VALUE rb_string_value (VALUE*);
char *rb_string_value_ptr (VALUE*);
char *rb_string_value_cstr (VALUE*);

void rb_check_safe_obj (VALUE);
void rb_check_safe_str (VALUE);

void rb_secure (int);
extern int ruby_safe_level;

void rb_set_safe_level (int);
void rb_secure_update (VALUE);

int rb_num2long (VALUE);
uint rb_num2ulong (VALUE);
long rb_num2ll (VALUE);
ulong rb_num2ull (VALUE);
double rb_num2dbl (VALUE);

char *rb_str2cstr (VALUE,int*);

VALUE rb_newobj ();
struct RBasic {
   uint flags;
   VALUE klass;
}

struct RObject {
   RBasic basic;
   st_table *iv_tbl;
}

struct RClass {
   RBasic basic;
   st_table *iv_tbl;
   st_table *m_tbl;
   VALUE _super;
}

struct RFloat {
   RBasic basic;
   double value;
}

struct RString {
 RBasic basic;
 int len;
 char *ptr;
 union aux_union  {
   int capa;
   VALUE shared;
 } 
 aux_union aux;
}

struct RArray {
 RBasic basic;
 int len;
 union aux_union  {
   int capa;
   VALUE shared;
 } 
 aux_union aux;
 VALUE *ptr;
}

struct RRegexp {
   RBasic basic;
   re_pattern_buffer *ptr;
   int len;
   char *str;
}

struct RHash {
   RBasic basic;
   st_table *tbl;
   int iter_lev;
   VALUE ifnone;
}

struct RFile {
   RBasic basic;
   OpenFile *fptr;
}

struct RFILE {
   RBasic basic;
   OpenFile *fptr;
}

struct RData {
   RBasic basic;
   void (*dmark) (void*);
   void (*dfree) (void*);
   void *data;
}

alias void (*RUBY_DATA_FUNC) (void*);

VALUE rb_data_object_alloc (VALUE,void*,RUBY_DATA_FUNC,RUBY_DATA_FUNC);
struct RStruct {
   RBasic basic;
   int len;
   VALUE *ptr;
}

struct RBignum {
   RBasic basic;
   char sign;
   int len;
   void *digits;
}
void rb_obj_infect (VALUE,VALUE);

void rb_glob ( char*,void(*)( char*,VALUE),VALUE);
void rb_globi ( char*,void(*)( char*,VALUE),VALUE);

VALUE rb_define_class ( char*,VALUE);
VALUE rb_define_module ( char*);
VALUE rb_define_class_under (VALUE,  char*, VALUE);
VALUE rb_define_module_under (VALUE,  char*);

void rb_include_module (VALUE,VALUE);
void rb_extend_object (VALUE,VALUE);

void rb_define_variable ( char*,VALUE*);
void rb_define_virtual_variable ( char*,VALUE(*)(),void(*)());
void rb_define_hooked_variable ( char*,VALUE*,VALUE(*)(),void(*)());
int ruby_glob ( char*,int,int(*)( char*,VALUE),VALUE);
int ruby_globi ( char*,int,int(*)( char*,VALUE),VALUE);
void rb_define_readonly_variable ( char*,VALUE*);
void rb_define_const (VALUE, char*,VALUE);
void rb_define_global_const ( char*,VALUE);


void rb_define_method (VALUE, char*,VALUE(*)(),int);
void rb_define_module_function (VALUE, char*,VALUE(*)(),int);
void rb_define_global_function ( char*,VALUE(*)(),int);

void rb_undef_method (VALUE, char*);
void rb_define_alias (VALUE, char*, char*);
void rb_define_attr (VALUE, char*,int,int);

void rb_global_variable (VALUE*);
void rb_gc_register_address (VALUE*);
void rb_gc_unregister_address (VALUE*);

ID rb_intern ( char*);
char *rb_id2name (ID);
ID rb_to_id (VALUE);

char *rb_class2name (VALUE);
char *rb_obj_classname (VALUE);

void rb_p (VALUE);

VALUE rb_eval_string ( char*);
VALUE rb_eval_string_protect ( char*, int*);
VALUE rb_eval_string_wrap ( char*, int*);
VALUE rb_funcall (VALUE, ID, int, ...);
VALUE rb_funcall2 (VALUE, ID, int,  VALUE*);
VALUE rb_funcall3 (VALUE, ID, int,  VALUE*);
int rb_scan_args (int,  VALUE*,  char*, ...);
VALUE rb_call_super (int,  VALUE*);

VALUE rb_gv_set ( char*, VALUE);
VALUE rb_gv_get ( char*);

VALUE rb_equal (VALUE,VALUE);

extern VALUE ruby_verbose, ruby_debug;

void rb_raise (VALUE,  char*, ...) ;
void rb_fatal ( char*, ...) ;
void rb_bug ( char*, ...) ;
void rb_sys_fail ( char*) ;
void rb_iter_break () ;
void rb_exit (int) ;
void rb_notimplement () ;

void rb_warning ( char*, ...);
void rb_sys_warning ( char*, ...);
void rb_warn ( char*, ...);

VALUE rb_each (VALUE);
VALUE rb_yield (VALUE);
VALUE rb_yield_values (int n, ...);
VALUE rb_yield_splat (VALUE);
int rb_block_given_p ();
void rb_need_block ();
VALUE rb_iterate (VALUE(*)(VALUE),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue2 (VALUE(*)(),VALUE,VALUE(*)(),VALUE,...);
VALUE rb_ensure (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_catch ( char*,VALUE(*)(),VALUE);
void rb_throw ( char*,VALUE) ;

VALUE rb_require ( char*);

void ruby_init ();
void ruby_options (int, char**);
void ruby_run () ;

extern VALUE rb_mKernel;
extern VALUE rb_mComparable;
extern VALUE rb_mEnumerable;
extern VALUE rb_mPrecision;
extern VALUE rb_mErrno;
extern VALUE rb_mFileTest;
extern VALUE rb_mGC;
extern VALUE rb_mMath;
extern VALUE rb_mProcess;

extern VALUE rb_cObject;
extern VALUE rb_cArray;
extern VALUE rb_cBignum;
extern VALUE rb_cClass;
extern VALUE rb_cDir;
extern VALUE rb_cData;
extern VALUE rb_cFalseClass;
extern VALUE rb_cFile;
extern VALUE rb_cFixnum;
extern VALUE rb_cFloat;
extern VALUE rb_cHash;
extern VALUE rb_cInteger;
extern VALUE rb_cIO;
extern VALUE rb_cModule;
extern VALUE rb_cNilClass;
extern VALUE rb_cNumeric;
extern VALUE rb_cProc;
extern VALUE rb_cRange;
extern VALUE rb_cRegexp;
extern VALUE rb_cString;
extern VALUE rb_cSymbol;
extern VALUE rb_cThread;
extern VALUE rb_cTime;
extern VALUE rb_cTrueClass;
extern VALUE rb_cStruct;

extern VALUE rb_eException;
extern VALUE rb_eStandardError;
extern VALUE rb_eSystemExit;
extern VALUE rb_eInterrupt;
extern VALUE rb_eSignal;
extern VALUE rb_eFatal;
extern VALUE rb_eArgError;
extern VALUE rb_eEOFError;
extern VALUE rb_eIndexError;
extern VALUE rb_eRangeError;
extern VALUE rb_eIOError;
extern VALUE rb_eRuntimeError;
extern VALUE rb_eSecurityError;
extern VALUE rb_eSystemCallError;
extern VALUE rb_eTypeError;
extern VALUE rb_eZeroDivError;
extern VALUE rb_eNotImpError;
extern VALUE rb_eNoMemError;
extern VALUE rb_eNoMethodError;
extern VALUE rb_eFloatDomainError;

extern VALUE rb_eScriptError;
extern VALUE rb_eNameError;
extern VALUE rb_eSyntaxError;
extern VALUE rb_eLoadError;

extern VALUE rb_stdin, rb_stdout, rb_stderr;
extern VALUE ruby_errinfo;

static VALUE
rb_class_of(VALUE obj)
{
   if (((cast(int)(obj))&0x01)) return rb_cFixnum;
   if (obj == (cast(VALUE)4)) return rb_cNilClass;
   if (obj == (cast(VALUE)0)) return rb_cFalseClass;
   if (obj == (cast(VALUE)2)) return rb_cTrueClass;
   if (((cast(VALUE)(obj)&0xff)==0x0e)) return rb_cSymbol;

   return (cast(RBasic*)(obj)).klass;
}

static int
rb_type(VALUE obj)
{
   if (((cast(int)(obj))&0x01)) return 0x0a;
   if (obj == (cast(VALUE)4)) return 0x01;
   if (obj == (cast(VALUE)0)) return 0x21;
   if (obj == (cast(VALUE)2)) return 0x20;
   if (obj == (cast(VALUE)6)) return 0x3c;
   if (((cast(VALUE)(obj)&0xff)==0x0e)) return 0x24;
   return ((cast(RBasic*)(obj)).flags & 0x3f);
}

static int
rb_special_const_p(VALUE obj)
{
   if (((cast(VALUE)(obj) & 0x03) || !((cast(VALUE)(obj) & ~(cast(VALUE)4)) != 0))) return (cast(VALUE)2);
   return (cast(VALUE)0);
}

struct timezone {
   int tz_minuteswest;
   int tz_dsttime;
}

alias timezone * __timezone_ptr_t;
extern int gettimeofday (timeval * __tv,
   __timezone_ptr_t __tz) ;

extern int settimeofday ( timeval *__tv,
    timezone *__tz) ;

extern int adjtime ( timeval *__delta,
     timeval *__olddelta) ;

enum __itimer_which
{
   ITIMER_REAL = 0,
   ITIMER_VIRTUAL = 1,
   ITIMER_PROF = 2
};

struct itimerval {
   timeval it_interval;
   timeval it_value;
}

alias int __itimer_which_t;

extern int getitimer (__itimer_which_t __which,
       itimerval *__value) ;

extern int setitimer (__itimer_which_t __which,
        itimerval * __new,
       itimerval * __old) ;

extern int utimes ( char *__file,  timeval __tvp[2]);

extern int lutimes ( char *__file,  timeval __tvp[2]);

extern int futimes (int __fd,  timeval __tvp[2]) ;

void rb_mem_clear (VALUE*, int);
VALUE rb_assoc_new (VALUE, VALUE);
VALUE rb_check_array_type (VALUE);
VALUE rb_ary_new ();
VALUE rb_ary_new2 (int);
VALUE rb_ary_new3 (int,...);
VALUE rb_ary_new4 (int,  VALUE *);
VALUE rb_ary_freeze (VALUE);
VALUE rb_ary_aref (int, VALUE*, VALUE);
void rb_ary_store (VALUE, int, VALUE);
VALUE rb_ary_dup (VALUE);
VALUE rb_ary_to_ary (VALUE);
VALUE rb_ary_to_s (VALUE);
VALUE rb_ary_push (VALUE, VALUE);
VALUE rb_ary_pop (VALUE);
VALUE rb_ary_shift (VALUE);
VALUE rb_ary_unshift (VALUE, VALUE);
VALUE rb_ary_entry (VALUE, int);
VALUE rb_ary_each (VALUE);
VALUE rb_ary_join (VALUE, VALUE);
VALUE rb_ary_print_on (VALUE, VALUE);
VALUE rb_ary_reverse (VALUE);
VALUE rb_ary_sort (VALUE);
VALUE rb_ary_sort_bang (VALUE);
VALUE rb_ary_delete (VALUE, VALUE);
VALUE rb_ary_delete_at (VALUE, int);
VALUE rb_ary_clear (VALUE);
VALUE rb_ary_plus (VALUE, VALUE);
VALUE rb_ary_concat (VALUE, VALUE);
VALUE rb_ary_assoc (VALUE, VALUE);
VALUE rb_ary_rassoc (VALUE, VALUE);
VALUE rb_ary_includes (VALUE, VALUE);
VALUE rb_ary_cmp (VALUE, VALUE);
VALUE rb_protect_inspect (VALUE(*)(),VALUE,VALUE);
VALUE rb_inspecting_p (VALUE);
VALUE rb_check_array_value (VALUE);
VALUE rb_values_at (VALUE, int, int, VALUE*, VALUE(*) (VALUE,int));

VALUE rb_big_clone (VALUE);
void rb_big_2comp (VALUE);
VALUE rb_big_norm (VALUE);
VALUE rb_uint2big (uint);
VALUE rb_int2big (int);
VALUE rb_uint2inum (uint);
VALUE rb_int2inum (int);
VALUE rb_cstr_to_inum ( char*, int, int);
VALUE rb_str_to_inum (VALUE, int, int);
VALUE rb_cstr2inum ( char*, int);
VALUE rb_str2inum (VALUE, int);
VALUE rb_big2str (VALUE, int);
int rb_big2long (VALUE);

uint rb_big2ulong (VALUE);


VALUE rb_ll2inum (long);
VALUE rb_ull2inum (ulong);
long rb_big2ll (VALUE);
ulong rb_big2ull (VALUE);

void rb_quad_pack (char*,VALUE);
VALUE rb_quad_unpack ( char*,int);
VALUE rb_dbl2big (double);
double rb_big2dbl (VALUE);
VALUE rb_big_plus (VALUE, VALUE);
VALUE rb_big_minus (VALUE, VALUE);
VALUE rb_big_mul (VALUE, VALUE);
VALUE rb_big_divmod (VALUE, VALUE);
VALUE rb_big_pow (VALUE, VALUE);
VALUE rb_big_and (VALUE, VALUE);
VALUE rb_big_or (VALUE, VALUE);
VALUE rb_big_xor (VALUE, VALUE);
VALUE rb_big_lshift (VALUE, VALUE);
VALUE rb_big_rand (VALUE, double*);

VALUE rb_class_boot (VALUE);
VALUE rb_class_new (VALUE);
VALUE rb_mod_init_copy (VALUE, VALUE);
VALUE rb_class_init_copy (VALUE, VALUE);
VALUE rb_singleton_class_clone (VALUE);
void rb_singleton_class_attached (VALUE,VALUE);
VALUE rb_make_metaclass (VALUE, VALUE);
void rb_check_inheritable (VALUE);
VALUE rb_class_inherited (VALUE, VALUE);
VALUE rb_define_class_id (ID, VALUE);
VALUE rb_module_new ();
VALUE rb_define_module_id (ID);
VALUE rb_mod_included_modules (VALUE);
VALUE rb_mod_include_p (VALUE, VALUE);
VALUE rb_mod_ancestors (VALUE);
VALUE rb_class_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_public_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_protected_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_private_instance_methods (int, VALUE*, VALUE);
VALUE rb_obj_singleton_methods (int, VALUE*, VALUE);
void rb_define_method_id (VALUE, ID, VALUE (*)(), int);
void rb_frozen_class_p (VALUE);
void rb_undef (VALUE, ID);
void rb_define_protected_method (VALUE,  char*, VALUE (*)(), int);
void rb_define_private_method (VALUE,  char*, VALUE (*)(), int);
void rb_define_singleton_method (VALUE,  char*, VALUE(*)(), int);
VALUE rb_singleton_class (VALUE);

int rb_cmpint (VALUE, VALUE, VALUE);
void rb_cmperr (VALUE, VALUE) ;

extern int ruby_nerrs;
VALUE rb_exc_new (VALUE,  char*, int);
VALUE rb_exc_new2 (VALUE,  char*);
VALUE rb_exc_new3 (VALUE, VALUE);
void rb_loaderror ( char*, ...) ;
void rb_name_error (ID,  char*, ...) ;
void rb_invalid_str ( char*,  char*) ;
void rb_compile_error ( char*, ...);
void rb_compile_error_append ( char*, ...);
void rb_load_fail ( char*) ;
void rb_error_frozen ( char*) ;
void rb_check_frozen (VALUE);
